// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/content/checkboxElement should change title 1`] = `
<div>
  <div
    class="CheckboxElement"
  >
    <input
      id="checkbox-test-id"
      type="checkbox"
      value="off"
    />
    <input
      class="Editable "
      placeholder="Edit text..."
      spellcheck="true"
      title="new title"
      type="text"
      value="new title"
    />
  </div>
</div>
`;

exports[`components/content/checkboxElement should match snapshot 1`] = `
<div>
  <div
    class="CheckboxElement"
  >
    <input
      id="checkbox-test-id"
      type="checkbox"
      value="off"
    />
    <input
      class="Editable "
      placeholder="Edit text..."
      spellcheck="true"
      title="test-title"
      value="test-title"
    />
  </div>
</div>
`;

exports[`components/content/checkboxElement should match snapshot when read only 1`] = `
<div>
  <div
    class="CheckboxElement"
  >
    <input
      disabled=""
      id="checkbox-test-id"
      type="checkbox"
      value="off"
    />
    <input
      class="Editable readonly "
      placeholder="Edit text..."
      readonly=""
      spellcheck="true"
      title="test-title"
      value="test-title"
    />
  </div>
</div>
`;

exports[`components/content/checkboxElement should toggle value 1`] = `
<div>
  <div
    class="CheckboxElement"
  >
    <input
      id="checkbox-test-id"
      type="checkbox"
      value="on"
    />
    <input
      class="Editable "
      placeholder="Edit text..."
      spellcheck="true"
      title="test-title"
      value="test-title"
    />
  </div>
</div>
`;
